Add all the npm scripts

--- a/package.json
+++ b/package.json
@@ -2,16 +2,27 @@
   "name": "seamless-can-i-clone-it",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "public/index.html",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build:sass": "sass --no-source-map src/sass:public/css",
+    "copy:assets": "copyfiles -u 1 ./src/assets/**/* public",
+    "copy:html": "copyfiles -u 1 ./src/*.html public",
+    "copy": "npm-run-all --parallel copy:*",
+    "watch:assets": "onchange 'src/assest/**/*' -- npm run copy:assets",
+    "watch:html": "onchange \"src/*.html\" -- npm run copy:html",
+    "watch:sass": "sass --watch src/sass:public/css",
+    "watch": "npm-run-all --parallel watch:*",
+    "serve": "browser-sync start --server public --files public",
+    "start": "npm-run-all copy --parallel watch serve",
+    "build": "npm-run-all copy:html build:*",
+    "postbuild": "postcss public/css/*.css -u autoprefixer cssnano -r --no-map"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Annie-Huang/seamless-can-i-clone-it.git"
   },
   "keywords": [],
-  "author": "",
+  "author": "Annie Huang",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/Annie-Huang/seamless-can-i-clone-it/issues"
